src/layout/projects/Projects.css
/* projects section */
.projects.hidden {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--bg-size);
  position: relative;
  opacity: 0;
  transform: translate(0, 2.5rem);
  transition: all 0.7s ease-in-out;
  transition-delay: 0.1s;
}

.projects.show {
  opacity: 1;
  transform: translate(0, 0);
}

/* Search container */
.projects .search {
  display: flex;
  width: 100%;
  gap: 0.625rem;
}

/* Search bar input */
.projects .search input {
  width: 100%;
  background-color: transparent;
  border: 1px solid var(--border-light);
  border-radius: var(--radius);
  color: inherit;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  opacity: 0.7;
  padding: 0.625rem 1.25rem;
}

/* Filter button */
.projects .search .filter {
  display: flex;
  align-items: center;
  gap: 0.313rem;
  background-color: transparent;
  color: var(--light-clr);
  font-family: inherit;
  font-weight: 500;
  font-size: 0.875rem;
  border: 1px solid var(--border-light);
  border-radius: var(--radius-btn);
  padding: 0.5rem 1rem;
  cursor: pointer;
  transition: background 0.3s ease-in-out;
}

.projects .search .filter:hover {
  background: var(--hover-light);
}

/* Project cards container */
.projects .projects-wrapper {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: var(--bg-size);
}

/* See more button */
.projects .more-projects {
  text-decoration: none;
  padding: 0.5rem 1rem;
  color: inherit;
  border-radius: var(--radius-btn);
  border: 1px solid var(--border-light);
  font-size: 0.875rem;
  cursor: pointer;
  transition: background 0.3s ease-in-out;
}

.projects .more-projects:hover {
  background: var(--hover-light);
}

@media (max-width: 700px) {
  .projects.hidden {
    transition-delay: 0.6s;
  }
}

